--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="https://pi4li.com/styles/build.css" />
 </head>
 <body>
-  <h1>Porkbun Search Filters</h1>
+    <div class="w-full h-10" style="background-color: #ef7878">
+        <h1>Porkbun Search Filters</h1>
+    </div>
 </body>
