--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <div class="w-full h-52 text-center text-white" style="background-color: #ef7878">
         <h1 class="text-4xl pt-8">Porkbun Search Filters</h1>
-        <h2 class="text-xl pt-2>The search filters you wish Porkbun had with one extension!</h2>
+        <h2 class="text-xl pt-2">The search filters you wish Porkbun had with one extension!</h2>
     </div>
 </body>
