--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://pi4li.com/styles/build.css" />
 </head>
 <body>
-    <div class="w-full h-52 text-center text-white" style="background-color: #ef7878">
+    <header class="w-full h-52 text-center text-white" style="background-color: #ef7878">
         <h1 class="text-4xl pt-8">Porkbun Search Filters</h1>
         <h2 class="text-xl pt-2">The search filters you wish Porkbun had with one extension!</h2>
-    </div>
+        <a href="/install" class="rounded-lg p-8 transition duration-500 ease-in-out bg-gray-300 hover:bg-gray-400">Add extension to Chrome</a>
+    </header>
 </body>
