--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="w-full h-52 text-center text-white" style="background-color: #ef7878">
         <h1 class="text-4xl pt-8">Porkbun Search Filters</h1>
-        <h2 class="text-xl pt-2">The search filters you wish Porkbun had with one extension!</h2>
-        <a href="/install" class="rounded-lg p-8 transition duration-500 ease-in-out bg-gray-300 hover:bg-gray-400">Add extension to Chrome</a>
+        <h2 class="text-xl pt-2 mb-6">The search filters you wish Porkbun had with one extension!</h2>
+        <a href="/install" class="rounded-lg p-6 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200">Add extension to Chrome</a>
     </header>
 </body>
