--- a/index.html
+++ b/index.html
@@ -12,4 +12,8 @@
         <h2 class="text-xl pt-2 mb-9">The search filters you wish Porkbun had with one extension!</h2>
         <a href="/install" class="rounded-lg p-6 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Add extension to Chrome</a>
     </header>
+    <div class="p-3">
+        <h3 class="font-bold text-xl">Introduction</h3>
+        <p>Hi! I'm Eddie and I use Porkbun to buy a lot of the website domains that I use for various web projects. I tend to find myself using Ctrl+F to find domains of a particular price and was getting so fed up of doing it, along with sifting through Handshake domains I have no care for, that I asked Porkbun over Twitter to add some filters and 'sort by' options to their search &mdash; they never answered. So I did it myself, in the form of a Chrome Extension and here it is for you to use!</p>
+    </div>
 </body>
