--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://pi4li.com/styles/build.css" />
 </head>
 <body>
-    <header class="w-full m-72 md:h-52 text-center text-white" style="background-color: #ef7878">
+    <header class="w-full h-72 md:h-52 text-center text-white" style="background-color: #ef7878">
         <h1 class="text-4xl pt-8">Porkbun Search Filters</h1>
         <h2 class="text-xl pt-2 mb-9">The search filters you wish Porkbun had with one extension!</h2>
         <a href="/install" class="rounded-lg p-6 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Add extension to Chrome</a>
