--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <a href="/install" class="rounded-lg p-6 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Add extension to Chrome</a>
     </header>
     <div class="p-3">
-        <h3 class="font-bold text-xl">Introduction</h3>
+        <h3 class="font-bold text-2xl">Introduction</h3>
         <p>Hi! I'm Eddie and I use Porkbun to buy a lot of the website domains that I use for various web projects. I tend to find myself using Ctrl+F to find domains of a particular price and was getting so fed up of doing it, along with sifting through Handshake domains I have no care for, that I asked Porkbun over Twitter to add some filters and 'sort by' options to their search &mdash; they never answered. So I did it myself, in the form of a Chrome Extension and here it is for you to use!</p>
+        <h3 class="font-bold text-2xl mt-2">Roadmap</h3>
+        <p>Various 'search by' options</p>
+        <p>TLD letter limit</p>
+        <p>Please send what you want adding to me &mdash; Twitter @EddiesTech, email <a href="mailto:ejac@eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">ejac@eddiecoldrick.com</a></p>
+        <p class="pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
     </div>
 </body>
