Add source links

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <input type="checkbox" class="inline-block" disabled><p class="pl-2 inline-block">TLD letter limit</p>
         <p>Please send what you want adding to me &mdash; Twitter @EddiesTech, email <a href="mailto:ejac@eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">ejac@eddiecoldrick.com</a></p>
         <p class="pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
+        <p><a href="https://github.com/pi4li/pbfilterssite" class="text-blue-500 no-underline hover:underline">View Web Source</a> | <a href="https://github.com/pi4li/pbfilters" class="text-blue-500 no-underline hover:underline">View Extension Source</a></p>
     </div>
 </body>
