removal of disallowed chrome internal url

--- a/install/index.html
+++ b/install/index.html
@@ -20,7 +20,7 @@
         <p>For now, you can download the release file using the below link. To install using this ZIP file, you will need:</p>
         <ol>
           <li>Extract the ZIP file into a folder</li>
-          <li>Navigate to <a href="chrome://extensions" class="text-blue-500 no-underline hover:underline">chrome://extensions</a>
+          <li>Navigate to chrome://extensions in the browser search box
           <li>Turn "Developer Mode" on</li>
           <li>Select "Load Unpacked"</li>
           <li>Select the folder where the extension files have been extracted to</li>
