--- a/install/index.html
+++ b/install/index.html
@@ -18,7 +18,7 @@
         <p>Not available, yet. (Hopefully) coming soon...</p>
         <h3 class="font-bold text-2xl mt-2">ZIP File</h3>
         <p>For now, you can download the release file using the below link. To install using this ZIP file, you will need:</p>
-        <ol>
+        <ol class="list-inside list-decimal">
           <li>Extract the ZIP file into a folder</li>
           <li>Navigate to chrome://extensions in the browser search box
           <li>Turn "Developer Mode" on</li>
@@ -26,6 +26,7 @@
           <li>Select the folder where the extension files have been extracted to</li>
           <li>The extension should now be installed!</li>
         </ol>
+        <a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.2-dist-beta.zip" class="rounded-lg p-6 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Download Extension ZIP file</a>
         <p class="pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
         <p><a href="https://github.com/pi4li/pbfilterssite" class="text-blue-500 no-underline hover:underline">View Web Source</a> | <a href="https://github.com/pi4li/pbfilters" class="text-blue-500 no-underline hover:underline">View Extension Source</a></p>
     </div>
