--- a/install/index.html
+++ b/install/index.html
@@ -11,7 +11,7 @@
         <h1 class="text-4xl pt-8">Porkbun Search Filters</h1>
         <h2 class="text-xl pt-2 mb-9">The search filters you wish Porkbun had with one extension!</h2>
     </header>
-    <div class="p-3">
+    <div class="p-3 mb-7">
         <h3 class="font-bold text-2xl">Install Porkbun Search Filters</h3>
         <p>Thanks for your interest in my extension.</p>
         <h3 class="font-bold text-2xl mt-2">Chrome Extension Store</h3>
@@ -26,7 +26,7 @@
           <li>Select the folder where the extension files have been extracted to</li>
           <li>The extension should now be installed!</li>
         </ol>
-        <a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.2-dist-beta.zip" class="rounded-lg p-6 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Download Extension ZIP file</a>
+        <a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.2-dist-beta.zip" class="rounded-lg p-4 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Download Extension ZIP file</a>
         <p class="pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
         <p><a href="https://github.com/pi4li/pbfilterssite" class="text-blue-500 no-underline hover:underline">View Web Source</a> | <a href="https://github.com/pi4li/pbfilters" class="text-blue-500 no-underline hover:underline">View Extension Source</a></p>
     </div>
