--- a/install/index.html
+++ b/install/index.html
@@ -11,14 +11,14 @@
         <h1 class="text-4xl pt-8">Porkbun Search Filters</h1>
         <h2 class="text-xl pt-2 mb-9">The search filters you wish Porkbun had with one extension!</h2>
     </header>
-    <div class="p-3 mb-7">
+    <div class="p-3">
         <h3 class="font-bold text-2xl">Install Porkbun Search Filters</h3>
         <p>Thanks for your interest in my extension.</p>
         <h3 class="font-bold text-2xl mt-2">Chrome Extension Store</h3>
         <p>Not available, yet. (Hopefully) coming soon...</p>
         <h3 class="font-bold text-2xl mt-2">ZIP File</h3>
         <p>For now, you can download the release file using the below link. To install using this ZIP file, you will need:</p>
-        <ol class="list-inside list-decimal">
+        <ol class="list-inside list-decimal mb-7">
           <li>Extract the ZIP file into a folder</li>
           <li>Navigate to chrome://extensions in the browser search box
           <li>Turn "Developer Mode" on</li>
