--- a/install/index.html
+++ b/install/index.html
@@ -27,7 +27,7 @@
           <li>The extension should now be installed!</li>
         </ol>
         <a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.2-dist-beta.zip" class="rounded-lg p-4 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Download Extension ZIP file</a>
-        <p class="pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
+        <p class="mt-2 pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
         <p><a href="https://github.com/pi4li/pbfilterssite" class="text-blue-500 no-underline hover:underline">View Web Source</a> | <a href="https://github.com/pi4li/pbfilters" class="text-blue-500 no-underline hover:underline">View Extension Source</a></p>
     </div>
 </body>
