--- a/install/index.html
+++ b/install/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porkbun Search Filters</title>
     <link rel="stylesheet" href="https://pi4li.com/styles/build.css" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Porkbun Search Filters">
+    <meta name="description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, "sort by", and more!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pbfilters.pi4li.dev/">
+    <meta property="og:title" content="Porkbun Search Filters">
+    <meta property="og:description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, 'sort by', and more!">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://pbfilters.pi4li.dev/">
+    <meta property="twitter:title" content="Porkbun Search Filters">
+    <meta property="twitter:description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, 'sort by', and more!">
 </head>
 <body>
     <header class="w-full h-72 md:h-52 text-center text-white" style="background-color: #ef7878">
@@ -27,6 +42,7 @@
           <li>The extension should now be installed!</li>
         </ol>
         <a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.2-dist-beta.zip" class="rounded-lg p-4 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Download Extension ZIP file</a>
+        <p>Current Version: v0.2 (Beta) - Allows you to remove Handshake domains from results and sort renewals by renewal price
         <p class="mt-2 pt-4">A project by <a href="https://eddiecoldrick.com" class="text-blue-500 no-underline hover:underline">Eddie Coldrick</a>, not affiliated with Porkbun, LLC.</p>
         <p><a href="https://github.com/pi4li/pbfilterssite" class="text-blue-500 no-underline hover:underline">View Web Source</a> | <a href="https://github.com/pi4li/pbfilters" class="text-blue-500 no-underline hover:underline">View Extension Source</a></p>
     </div>
