--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porkbun Search Filters</title>
     <link rel="stylesheet" href="https://pi4li.com/styles/build.css" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Porkbun Search Filters">
+    <meta name="description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, "sort by", and more!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pbfilters.pi4li.dev/">
+    <meta property="og:title" content="Porkbun Search Filters">
+    <meta property="og:description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, 'sort by', and more!">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://pbfilters.pi4li.dev/">
+    <meta property="twitter:title" content="Porkbun Search Filters">
+    <meta property="twitter:description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, 'sort by', and more!">
 </head>
 <body>
     <header class="w-full h-72 md:h-52 text-center text-white" style="background-color: #ef7878">
