--- a/install/index.html
+++ b/install/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://pi4li.com/styles/build.css" />
     <!-- Primary Meta Tags -->
     <meta name="title" content="Porkbun Search Filters">
-    <meta name="description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, "sort by", and more!">
+    <meta name="description" content="The search filters you wish Porkbun had with one Google Chrome extension! Remove handshakes, 'sort by', and more!">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
