--- a/install/index.html
+++ b/install/index.html
@@ -42,7 +42,7 @@
           <li>The extension should now be installed!</li>
         </ol>
         <a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v.0.2-rev1-dist-beta.zip" class="rounded-lg p-4 transition duration-500 ease-in-out bg-gray-100 hover:bg-gray-200 text-black">Download Extension ZIP file</a>
-        <p class="mt-5"><b>Current Version:</b> v0.2 Rev1 (Beta) - Allows you to remove Handshake domains from results and sort renewals by renewal price
+        <p class="mt-5"><b>Current Version:</b> v0.2 Rev1 (Beta) - Allows you to remove Handshake domains from results and sort domains by renewal price
         <p><b>Previous Releases:</b></p>
         <p><a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.1-dist.zip" class="text-blue-500 no-underline hover:underline">v0.1 Beta</a> &mdash; Option to remove Handbrake domains from search results</p>
         <p><a href="https://eu2.contabostorage.com/5c302ed2574345c1bce6f9733cf795f2:pbfilters/releases/porkbun-chrome-v0.2-dist-beta.zip" class="text-blue-500 no-underline hover:underline">v0.2 Beta</a> &mdash; Option to remove Handbrake domains and to sort by renewal price, but lacks service worker to detect install and show onboarding page (see v0.2 Rev1)</p>
